# for_students

./: '  CMakeLists.txt  app.out  eba.sh  fuck.cpp  hi  input.txt  main.cpp  output.txt
.cache/clangd/index/: List.cpp.79B6D8F3CA6F9610.idx  List.cpp.F213F8A9EF197450.idx  List.h.74D9D417313BF7D2.idx  ListItem.cpp.0CCF6BA97A48CB04.idx  ListItem.h.D3700DF2AB06FBFC.idx  Log.cpp.256ECF450787CC7D.idx  Log.h.95F260D4632FADF1.idx  Menu.cpp.5C8A376F965AC25E.idx  Menu.cpp.5CAA51867E87D6E8.idx  Menu.cpp.CC8EC9E702841C6A.idx  Menu.h.2BFCC07F2709ECEF.idx  Menu.h.6C6C0AA5BC6C40BB.idx  Menu.h.AED1345AF44E73ED.idx  MenuItem.cpp.1B1DA213244D6E6E.idx  MenuItem.cpp.4A30ACAD7A975242.idx  MenuItem.cpp.51201CED7C7C188B.idx  MenuItem.cpp.56156AAA34A30FDC.idx  MenuItem.h.73D3EF7EC36D384E.idx  MenuItem.h.B6B9A8FE61B21327.idx  MenuItem.h.D0FDBA328A102C25.idx  MenuItemFactory.cpp.2115A7F4DFF67714.idx  MenuItemFactory.cpp.7F615C5288EC0B94.idx  MenuItemFactory.cpp.9A7D05BF3A8F944B.idx  MenuItemFactory.cpp.DD69BB8B5836558E.idx  MenuItemFactory.h.400CCF64753EBA8B.idx  MenuItemFactory.h.6DC6EC038B5F77F0.idx  MenuItemFactory.h.F3E5C5D517F0B156.idx  main.cpp.2150007768B6AD42.idx  main.cpp.E02C772BCE146DCB.idx
.cmake/api/v1/reply/: index-2023-09-13T16-06-04-0687.json
Core/Inc/List/: List.h  ListItem.h
Core/Inc/Log/: Log.h
Core/Inc/Menu/: MenuItem.h  MenuItemFactory.h
Core/Src/List/: List.cpp  ListItem.cpp
Core/Src/Menu/: MenuItem.cpp  MenuItemFactory.cpp
libs/: Menu.h  MenuItem.h  MenuItemFactory.h
src/: Menu.cpp  MenuItem.cpp
